[gd_scene load_steps=15 format=3 uid="uid://cr77bq1lfr86e"]

[ext_resource type="Script" uid="uid://dnyp3qif8ob0u" path="res://pause_menu.gd" id="1_nwcfo"]
[ext_resource type="FontFile" uid="uid://deecenqr7nl3u" path="res://Orbitron-VariableFont_wght.ttf" id="2_05uyy"]
[ext_resource type="AudioStream" uid="uid://t6yuymrsp7d0" path="res://menu-button-press.mp3" id="3_05uyy"]

[sub_resource type="LabelSettings" id="LabelSettings_dw050"]
font = ExtResource("2_05uyy")
font_size = 50
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_b26j0"]
default_font = ExtResource("2_05uyy")
default_font_size = 20

[sub_resource type="Theme" id="Theme_dw050"]
default_font = ExtResource("2_05uyy")
default_font_size = 20

[sub_resource type="Animation" id="Animation_nwcfo"]
resource_name = "FadeIn"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"teleport"
}]
}

[sub_resource type="Animation" id="Animation_05uyy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p81d2"]
_data = {
&"FadeIn": SubResource("Animation_nwcfo"),
&"RESET": SubResource("Animation_05uyy")
}

[sub_resource type="LabelSettings" id="LabelSettings_2nc7s"]
font = ExtResource("2_05uyy")
font_size = 40
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_p81d2"]
default_font = ExtResource("2_05uyy")
default_font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_05uyy"]
font = ExtResource("2_05uyy")
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_p81d2"]
font = ExtResource("2_05uyy")
font_size = 18

[sub_resource type="Theme" id="Theme_05uyy"]
default_font = ExtResource("2_05uyy")
default_font_size = 20

[node name="PauseMenu" type="CenterContainer"]
process_mode = 3
z_index = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_nwcfo")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(4000, 4000)
layout_mode = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.329412)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="ButtonPressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_05uyy")
bus = &"SFX"

[node name="Menu1" type="Control" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu1"]
process_mode = 3
z_index = 1
layout_mode = 2
offset_left = -122.0
offset_top = -70.0
offset_right = 122.0
offset_bottom = 70.0
mouse_filter = 2

[node name="Label" type="Label" parent="Menu1/VBoxContainer"]
layout_mode = 2
text = "Paused"
label_settings = SubResource("LabelSettings_dw050")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="SettingsButton" type="Button" parent="Menu1/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_b26j0")
text = "SETTINGS"

[node name="MainMenuButton" type="Button" parent="Menu1/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_dw050")
text = "MAIN MENU"

[node name="BackButton" type="Button" parent="Menu1/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_b26j0")
text = "BACK"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Menu1"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_p81d2")
}

[node name="Menu2" type="Control" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Menu2/VBoxContainer"]
layout_mode = 2
text = "SETTINGS"
label_settings = SubResource("LabelSettings_2nc7s")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FullscreenCheck" type="CheckBox" parent="Menu2/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_p81d2")
text = " Fullscreen"

[node name="SFXVolumeLabel" type="Label" parent="Menu2/VBoxContainer"]
layout_mode = 2
text = "SFX Volume"
label_settings = SubResource("LabelSettings_05uyy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXVolume" type="HSlider" parent="Menu2/VBoxContainer"]
layout_mode = 2
min_value = -80.0
max_value = 0.0

[node name="MusicVolumeLabel" type="Label" parent="Menu2/VBoxContainer"]
layout_mode = 2
text = "Music Volume"
label_settings = SubResource("LabelSettings_p81d2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicVolume" type="HSlider" parent="Menu2/VBoxContainer"]
layout_mode = 2
min_value = -80.0
max_value = 0.0

[node name="Button" type="Button" parent="Menu2/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_05uyy")
text = "BACK"

[node name="ColorRect2" type="ColorRect" parent="."]
z_index = 4
custom_minimum_size = Vector2(4000, 4000)
layout_mode = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Menu1/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Menu1/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="Menu1/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Menu2/VBoxContainer/FullscreenCheck" to="." method="_on_fullscreen_check_pressed"]
[connection signal="value_changed" from="Menu2/VBoxContainer/SFXVolume" to="." method="_on_sfx_volume_value_changed"]
[connection signal="value_changed" from="Menu2/VBoxContainer/MusicVolume" to="." method="_on_music_volume_value_changed"]
[connection signal="pressed" from="Menu2/VBoxContainer/Button" to="." method="_on_button_pressed"]
